# UHIA

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  design-document.md  implementation-plan.md  tech-stack.md
ironanchor/: Cargo.toml  rust-toolchain.toml
ironanchor/scripts/: build.sh  run-qemu.sh
ironanchor/src/: lib.rs  main.rs
ironanchor/src/efivars/: mod.rs  types.rs
ironanchor/src/identity/: display.rs  fingerprint.rs
ironanchor/src/network/: mod.rs
ironanchor/src/smbios/: display.rs  parser.rs
ironanchor/src/tpm/: mod.rs
scripts/: build.sh  run-qemu.sh
src/: main.rs
src/efivars/: mod.rs  types.rs
src/identity/: hash.rs  mod.rs
src/network/: display.rs  types.rs
src/smbios/: mod.rs  types.rs
src/tpm/: display.rs  types.rs
