[package]
name = "uhia"
version = "0.1.0"
edition = "2021"
description = "UEFI Hardware Identity Agent"

[lib]
name = "uhia"
path = "src/lib.rs"

[[bin]]
name = "uhia"
path = "src/main.rs"

[[bin]]
name = "uhia_dxe"
path = "src/bin/uhia_dxe.rs"

[dependencies]
uefi = { version = "0.28", features = ["alloc"] }
uefi-services = "0.25"
sha2 = { version = "0.10", default-features = false }
heapless = "0.8"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
